--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <p>Hello!</p>
-
+  <h1>Hello world!</h1>
+  <h2>Hello!</h2>
+  <h3>asdasd</h3>
   <!-- <script>
     alert(1);
   </script> -->
